--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,7 +45,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\_Scripts\AirFillCOntroller.cs" />
      <Compile Include="Assets\_Scripts\BackgroundController.cs" />
+     <Compile Include="Assets\_Scripts\BalloonController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
